--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <script>
     // Wait for OpenCV to load
     function onOpenCvReady() {
-        console.log('OpenCV.js is ready');
+        alert('OpenCV.js is ready');
         initCamera();
     }
 
@@ -31,7 +31,7 @@
             video.srcObject = stream;
             video.play();
         }).catch(error => {
-            console.error("Error accessing the camera:", error);
+            alert("Error accessing the camera:", error);
         });
     }
 
