--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 
     document.getElementById('captureButton').addEventListener('click', captureAndProcess);
     openCamera();
+    console.log('OpenCV.js loaded');
 </script>
 
 </body>
